# EdgeEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Data/: EngineSettings.ini
Data/Resources/: Edgine.rc
Scripts/: configure.bat
Source/Application/: Camera.cpp  Camera.h  Engine.h  Engine_EventHandlers.cpp  Engine_Main.cpp  Engine_Render.cpp  Engine_Update.cpp  Engine_WindowEvents.cpp  Events.h  Geometry.cpp  Geometry.h  Input.cpp  Input.h  KeyCodes.h  Main.cpp  Math.cpp  Math.h  Mesh.cpp  Mesh.h  MouseCodes.h  Platform.h  Quaternion.cpp  Quaternion.h  Settings.h  Transform.cpp  Transform.h  Types.h  Window.cpp  Window.h
Source/Renderer/: Buffer.cpp  Buffer.h  CMakeLists.txt  CommandQueue.cpp  CommandQueue.h  Common.h  Device.cpp  Device.h  Fence.cpp  Fence.h  Renderer.cpp  Renderer.h  Renderer_Resources.cpp  ResourceHeaps.cpp  ResourceHeaps.h  ResourceViews.cpp  ResourceViews.h  SwapChain.cpp  SwapChain.h  Texture.cpp  Texture.h
Source/Shaders/: FullscreenTriangle.hlsl  hello-cube.hlsl  hello-file.hlsl  hello-triangle.hlsl
Source/Utils/: CMakeLists.txt
Source/Utils/Source/: Image.cpp  Image.h  Log.cpp  Log.h  Multithreading.cpp  Multithreading.h  SystemInfo.cpp  SystemInfo.h  Timer.cpp  Timer.h  utils.cpp  utils.h
